# skgkernel

./: hatch_build.py  notes.txt  pyproject.toml
skg_kernel/: __init__.py  __main__.py  kernel.py
