[build-system]
requires = [
    "hatchling>=1.10.0", "ipykernel"
]
build-backend = "hatchling.build"

[project]
name = "skg-kernel"
dynamic = [
    "version",
]
description = "Security Knowledge Graph kernel for Jupyter"
readme = "README.rst"
license = { file = "LICENSE" }
authors = [
    { name = "Min Wei", email = "minwei@skg.ai" },
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dependencies = [
    "ipykernel",
    "jupyter_client",
]

[project.optional-dependencies]
test = [
  "jupyter_kernel_test",
]

[project.urls]
Homepage = ""

[tool.hatch.version]
path = "skg_kernel/__init__.py"

# Used to call hatch_build.py
[tool.hatch.build.hooks.custom]


[tool.hatch.build.targets.sdist]
include = [
    "/skg_kernel",
]

[tool.hatch.build.targets.wheel.shared-data]
"skg_kernelspec/share" = "share"
